@@ -256,16 +256,28 @@
 				<term><option>log_dest</option> <replaceable>destinations</replaceable></term>
 				<listitem>
 					<para>Send log messages to a particular destination.
-					Possible destinations are: stdout stderr syslog topic.
-					stdout and stderr log to the console on the named output.
-					syslog uses the userspace syslog facility which usually
-					ends up in /var/log/messages or similar and topic logs to the
-					broker topic '$SYS/broker/log/&lt;severity&gt;', where severity
-					is one of D, E, W, N, I, M which are debug, error, warning,
-					notice, information and message. Message type severity is
-					used by the subscribe and unsubscribe log_type options and
-					publishes log messages at $SYS/broker/log/M/subscribe and
-					$SYS/broker/log/M/unsubscribe.</para>
+						Possible destinations are: <option>stdout</option>
+						<option>stderr</option> <option>syslog</option>
+						<option>topic</option>.</par>
+					<para><option>stdout</option> and
+						<option>stderr</option> log to the console on the
+						named output.</para>
+					<para><option>syslog</option> uses the userspace syslog
+						facility which usually ends up in /var/log/messages or
+						similar and topic logs to the broker topic
+						'$SYS/broker/log/&lt;severity&gt;', where severity is
+						one of D, E, W, N, I, M which are debug, error,
+						warning, notice, information and message. Message type
+						severity is used by the subscribe and unsubscribe
+						log_type options and publishes log messages at
+						$SYS/broker/log/M/subscribe and
+						$SYS/broker/log/M/unsubscribe.</para>
+					<para>The <option>file</option> destination requires an
+						additional parameter which is the file to be logged to,
+						e.g. "log_dest file /var/log/mosquitto.log". The file
+						will be closed and reopened when the broker receives a
+						HUP signal. Only a single file destination may be
+						configured.</para>
 					<para>Use "log_dest none" if you wish to
 					disable logging. Defaults to stderr. This option
 					may be specified multiple times.</para>
