@@ -359,15 +359,24 @@
 
 # Places to log to. Use multiple log_dest lines for multiple 
 # logging destinations.
-# Possible destinations are: stdout stderr syslog topic
+# Possible destinations are: stdout stderr syslog topic file
+#
 # stdout and stderr log to the console on the named output.
+#
 # syslog uses the userspace syslog facility which usually ends up 
 # in /var/log/messages or similar.
+#
 # topic logs to the broker topic '$SYS/broker/log/<severity>', 
 # where severity is one of D, E, W, N, I, M which are debug, error, 
 # warning, notice, information and message. Message type severity is used by
 # the subscribe/unsubscribe log_types and publishes log messages to
 # $SYS/broker/log/M/susbcribe or $SYS/broker/log/M/unsubscribe.
+#
+# The file destination requires an additional parameter which is the file to be
+# logged to, e.g. "log_dest file /var/log/mosquitto.log". The file will be
+# closed and reopened when the broker receives a HUP signal. Only a single file
+# destination may be configured.
+#
 # Note that if the broker is running as a Windows service it will default to
 # "log_dest none" and neither stdout nor stderr logging is available.
 # Use "log_dest none" if you wish to disable logging.
