@@ -6,6 +6,7 @@ Broker:
 - Add support for round_robin bridge option.
 - It is now possible to disable $SYS at compile time.
 - Add support for logging SUBSCRIBE/UNSUBSCRIBE events.
+- Add "log_dest file" logging support.
 - Auth plugin ACL check function now passes the client id as well as username
   and password.
 - The queue_qos0_messages option wasn't working correctly, this has now been
